Annotate obsolete API in IrPluginContext with ObsoleteDescriptorBasedAPI

--- a/libraries/tools/kotlin-maven-serialization/pom.xml
+++ b/libraries/tools/kotlin-maven-serialization/pom.xml
@@ -74,6 +74,9 @@
                 </executions>
                 <configuration>
                     <jvmTarget>1.8</jvmTarget>
+                    <args>
+                        <arg>-Xopt-in=org.jetbrains.kotlin.ir.ObsoleteDescriptorBasedAPI</arg>
+                    </args>
                 </configuration>
             </plugin>
             <plugin>
